--- a/Django_data/static/css/settings.css
+++ b/Django_data/static/css/settings.css
@@ -227,6 +227,7 @@
 
     #headerTextRow {
         width: 32em;
+        margin-top: 1em;
     }
 
     #settingsTitle::before {
@@ -297,7 +298,7 @@
 
     #TEXT_Form p input {
         height: 3.125rem;
-        width: 10em;
+        width: 10.8em;
         align-self: stretch;
         border-radius: 0.625rem;
         background: #D9D9D9;
